# rsi_divergence_detector

./: .gitignore  .poetry.lock.swp  15min.csv  BTC_USDT_15m.csv  BTC_USDT_1d.csv  BTC_USDT_1h.csv  BTC_USDT_30m.csv  BTC_USDT_4h.csv  README.md  btc_data_get.py  config.yaml  divergence_data.csv  download_data.sh  pyproject.toml  rsi.py
model_data/mixed_lstm/: metrics.pkl  sid29_shd128_snl3_nid6_mhd256_nc2_d0.3000.pt
model_data/transformer_mixed/: metrics.pkl
notebooks/: 1.0-data_analysis.ipynb  2.0-divergence_detector_test.ipynb  2.1-fix_tp_sl_indicator.ipynb  3.0-data_visualization.ipynb  4.0-generate_training_data.ipynb  data_analysis.ipynb  divergence_analysis.ipynb
report/: root.aux  root.out  root.tex
src/: main.py
src/data_process/: config.yaml  data_fetcher.py  data_labeler.py  data_preprocess.py  data_processor_for_training.py  divergence.py  download_ethereum.py  main.py  merge_data.py  update_bitcoin.py  visualization.py
src/dataset/: lstm_dataset.py
src/model/: lstm_mixed.py  transformer.py
src/train/: train_lstm.py  train_transformer.py
src/training/: train_lstm.py  train_transformer.py
src/visualization/: __init__.py  finplot_utils.py
utils/: path_finder.py  time_series_module.py
