[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["shawn.kim <dun03191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.5"
requests = "^2.32.3"
pandas = "^2.2.3"
yfinance = "^0.2.49"
ccxt = "^4.4.32"
ta-lib = "^0.5.1"
ipykernel = "^6.29.5"
pyyaml = "^6.0.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
pandas-datareader = "^0.10.0"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
arch = "^7.2.0"
missingno = "^0.5.2"
mplfinance = "^0.12.10b0"
finplot = "^1.9.7"
torch = "^2.5.1"
tqdm = "^4.67.1"
gspread = "^5.0.0"
gspread-pandas = "^3.3.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
